k8s/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aqconnecta-ingress
  namespace: aqconnecta
  annotations:
    cert-manager.io/issuer: letsencrypt
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/proxy-body-size: 64m
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - aqconnecta.riume.com.br
      secretName: letsencrypt-nginx-cert-aqconnecta
  rules:
    - host: aqconnecta.riume.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aqconnecta-frontend
                port:
                  number: 80
